# airlock

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTEXT.md  Dockerfile  Dockerfile.harness  MEMORY.md  README.md  biome.json  docker-compose.showcase.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
docs/: PLAN.md  cli.md  durable-hosting.md  llama-cpp-on-fly.md  payment.md  scaling-cloudflare.md  showcase.md  testing-e2e.md
docs/adr/: 0001-we-operate-the-hosted-dev-tunnel.md  0002-dev-is-free-prod-is-paid.md  0003-two-targets-at-v1.md  0004-open-source-first.md  0005-x402-for-monetization.md  0006-wallets-in-airlock-crypto.md  0007-harness-adapter-interface.md  0008-airlock-never-hosts-inference.md  0009-withdrawn-number-skipped.md  0010-per-call-agent-isolation.md  0011-scaling-on-cloudflare-named-tunnel-replicas.md  0012-docker-first-runtime-model-external.md  0013-directory-liveness-via-publisher-heartbeat.md  0014-airlock-owns-the-loop.md  0015-worker-yaml-single-manifest.md  0016-pluggable-state-store-sticky-routing.md  0017-fleet-router.md  0019-inference-stays-external.md  (+2 more)
e2e-proof/: .gitignore  README.md  run-battery.sh  run-concurrency.sh
python/agent-runtime/: Dockerfile  README.md  pyproject.toml
python/agent-runtime/src/airlock_agent/: __init__.py  __main__.py  adapter.py  auth.py  concurrency.py  config.py  io.py  loader.py  manifest.py  runner.py  serve.py  surface.py  triggers.py  wellknown.py
python/agent-runtime/src/airlock_agent/console/: __init__.py  index.html
python/agent-runtime/src/airlock_agent/engine/: __init__.py  events.py  loop.py  planner.py  policy.py  router.py  sandbox.py
python/agent-runtime/src/airlock_agent/harnesses/: __init__.py  claude.py  crewai.py  custom.py  extract.py  langgraph.py  openai.py  openai_agents.py  smolagents.py  stub.py
python/agent-runtime/src/airlock_agent/state/: __init__.py  memory.py  sqlite.py  store.py
python/agent-runtime/src/airlock_agent/tools/: __init__.py  buy.py
python/agent-runtime/tests/: agentfix.py  test_buy_tool.py  test_concurrency.py  test_harnesses.py  test_loader.py  test_loader_config.py  test_surface.py
python/agent-runtime/tests/functional/: cl_agent.py  conftest.py  cr_agent.py  lg_agent.py  mock_model.py  oa_agent.py  sm_agent.py  test_composition.py  test_console.py  test_control_plane.py  test_docker.py  test_features.py  test_frameworks.py  test_gaps.py  test_hardening.py  test_process.py  test_triggers.py  tools.py
python/payment-fly/: README.md  pyproject.toml
python/payment-fly/src/airlock_deploy_payment/: __init__.py  config.py  envelope.py  ledger.py  middleware.py  reporter.py  types.py
python/payment-fly/src/airlock_payment/: __init__.py  config.py  facilitator.py  middleware.py  reporter.py  types.py
python/payment-fly/tests/: test_config.py  test_envelope.py  test_ledger.py  test_middleware.py  test_reporter.py
scripts/: concurrency-check.sh  live-proof.sh  test-airlock-hosted.sh  test-self-host.sh  try-fresh.sh
site/: index.html
(+98 files in other folders)
