[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airlock-agent"
version = "0.0.0"
description = "Deploy an agentic process (LangGraph/CrewAI/smolagents/custom) behind an OpenAI-compatible API with in-process x402 payment and airlock-config discovery."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "airlock contributors" }]
dependencies = [
    "airlock-payment",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/airlock_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
