[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airlock-agent"
version = "0.1.0"
description = "Deploy an agentic process (LangGraph/CrewAI/smolagents/custom) behind an OpenAI-compatible API with in-process x402 payment and airlock-config discovery."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "airlock contributors" }]
dependencies = [
    "airlock-payment",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pyyaml>=6,<7",
    "tomli>=2; python_version<'3.11'",
]

[project.optional-dependencies]
# Lets a deployed agent BUY from other agents (airlock_agent.tools.buy). Optional
# because airlock-crypto needs Python >=3.10; non-paying agents stay on >=3.9.
crypto = ["airlock-crypto>=0"]
dev = [
    "pytest>=8",
    "httpx>=0.27,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/airlock_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
